salesforce/force-app/main/default/objects/Vendor__c/Vendor__c.object-meta.xml
<CustomObject>
    <description>A seller: a marketplace, an Instagram shop or a D2C site. Holds the sender patterns used to route inbound messages, and the learned refund behaviour used to set refund check-in dates.</description>
    <label>Vendor</label>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>