salesforce/force-app/main/default/objects/Vendor__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>How Gitanjali buys from this vendor. Drives the stall threshold: Instagram sellers are chased sooner.</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Marketplace</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>D2C Website</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>