salesforce/force-app/main/default/objects/Vendor__c/fields/Email_Sender_Patterns__c.field-meta.xml
<CustomField>
    <fullName>Email_Sender_Patterns__c</fullName>
    <description>One pattern per line: a domain (amazon.in) or a full address. Used by DakiyaParserRegistry to pick a parser.</description>
    <label>Email Sender Patterns</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>