salesforce/force-app/main/default/objects/Vendor__c/fields/Follow_Up_After_Days__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_After_Days__c</fullName>
    <description>Overrides the default stall threshold for this vendor. Instagram sellers default to 5 days.</description>
    <label>Follow Up After (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>