salesforce/force-app/main/default/objects/Vendor__c/fields/Instagram_Handle__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Handle__c</fullName>
    <description>Handle including the @, for Instagram sellers.</description>
    <label>Instagram Handle</label>
    <length>80</length>
    <type>Text</type>
</CustomField>