salesforce/force-app/main/default/objects/Vendor__c/fields/Refund_History_Summary__c.field-meta.xml
<CustomField>
    <fullName>Refund_History_Summary__c</fullName>
    <description>LEARNED, human-readable, e.g. '3 returns: 2 full to UPI, 1 store credit'. Recomputed when an outcome is recorded.</description>
    <label>Refund History Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>