salesforce/force-app/main/default/objects/Vendor__c/fields/Return_Window_Days__c.field-meta.xml
<CustomField>
    <fullName>Return_Window_Days__c</fullName>
    <description>Days after delivery in which a return can be raised. Null means unknown - no return-window warning is sent.</description>
    <label>Return Window (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>