salesforce/force-app/main/default/objects/Vendor__c/fields/SMS_Sender_Patterns__c.field-meta.xml
<CustomField>
    <fullName>SMS_Sender_Patterns__c</fullName>
    <description>One DLT header fragment per line, e.g. AMAZON, MYNTRA. Matched against the SMS sender header.</description>
    <label>SMS Sender Patterns</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>