salesforce/force-app/main/default/objects/Vendor__c/fields/Typical_Refund_Days__c.field-meta.xml
<CustomField>
    <fullName>Typical_Refund_Days__c</fullName>
    <description>LEARNED, do not edit by hand: median days from Refund Initiated to a recorded outcome. Sets Refund_Check_Due__c.</description>
    <label>Typical Refund Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>