salesforce/force-app/main/default/objects/Vendor__c/fields/Usual_Refund_Mode__c.field-meta.xml
<CustomField>
    <fullName>Usual_Refund_Mode__c</fullName>
    <description>LEARNED from recorded refund outcomes.</description>
    <label>Usual Refund Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Original Payment</fullName>
                </value>
                <value>
                    <fullName>Store Credit</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>